Fix for header jumping while loading avatar

--- a/static/assets/css/custom.css
+++ b/static/assets/css/custom.css
@@ -83,6 +83,7 @@ a:hover {
 
 .avatar img {
   border-radius: 48px;
+  height: 125px;
 }
 
 .site__name {
